<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:fitsSystemWindows="true"
    tools:context="vst.jimmy.activity.StartActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_padding_top"
        android:background="@drawable/background"
        android:gravity="top|center"
        android:orientation="vertical">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="300px"
                android:layout_height="200px"
                app:srcCompat="@drawable/logo" />
            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="@dimen/header"
                    android:textColor="@color/colorWhite"
                    android:text="@string/app" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/colorWhite"
                    android:text="@string/app_name" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/colorWhite"
                    android:text="@string/ver" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5px"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingTop="20dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:background="@drawable/custom_button"
                android:onClick="selectMaster"
                android:text="@string/select"
                android:textColor="@color/colorWhite"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtMasterName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edittex_style"
                android:hint="@string/master"
                android:inputType="textPersonName"
                android:text=""
                android:textAlignment="center"
                android:textColor="@android:color/background_light"
                android:textColorHint="@android:color/background_light" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingTop="5dp">

            <EditText
                android:id="@+id/edtIp"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginRight="10dp"
                android:layout_weight="3"
                android:background="@drawable/edittex_style"
                android:hint="@string/ip"
                android:inputType="textPersonName"
                android:text=""
                android:textAlignment="center"
                android:textColor="@android:color/background_light"
                android:textColorHint="@android:color/darker_gray" />

            <EditText
                android:id="@+id/edtPort"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/edittex_style"
                android:hint="@string/port"
                android:inputType="number"
                android:textAlignment="center"
                android:textColor="@android:color/background_light"
                android:textColorHint="@android:color/darker_gray" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginVertical="5px"
            android:padding="3dp"
            android:paddingHorizontal="15px">

            <EditText
                android:id="@+id/edtPassWord"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="2"
                android:background="@drawable/edittex_style"
                android:ems="15"
                android:hint="@string/pass"
                android:inputType="numberPassword"
                android:maxLength="8"
                android:textAlignment="center"
                android:textColor="@android:color/background_light"
                android:textColorHint="@android:color/darker_gray" />

            <CheckBox
                android:id="@+id/chkShow"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@android:color/transparent"
                android:checked="false"
                android:shadowColor="@android:color/transparent"
                android:text="@string/showhide"
                android:textColor="@color/colorWhite"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/chkSave"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/savepass"
                android:textColor="@color/colorWhite"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginVertical="5px"
            android:gravity="center"
            android:padding="15dp">

            <Button
                android:id="@+id/btnConnect"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/custom_button"
                android:enabled="false"
                android:onClick="connectToESP"
                android:text="@string/connect"
                android:textColor="@color/colorWhite"
                android:textStyle="bold" />
        </TableRow>

    </LinearLayout>

    <include
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/activity_drawer">

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>
